.metadata/.plugins/org.eclipse.cdt.ui/Test001.build.log
15:02:59 **** Build of configuration Debug for project Test001 ****
make -j24 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc "../Core/Src/myLib.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/myLib.d" -MT"Core/Src/myLib.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/myLib.o"
arm-none-eabi-gcc "../Core/Src/stm32f4xx_hal_msp.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/stm32f4xx_hal_msp.d" -MT"Core/Src/stm32f4xx_hal_msp.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/stm32f4xx_hal_msp.o"
arm-none-eabi-gcc "../Core/Src/stm32f4xx_it.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/stm32f4xx_it.d" -MT"Core/Src/stm32f4xx_it.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/stm32f4xx_it.o"
arm-none-eabi-gcc "../Core/Src/syscalls.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/syscalls.d" -MT"Core/Src/syscalls.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/syscalls.o"
arm-none-eabi-gcc "../Core/Src/sysmem.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/sysmem.d" -MT"Core/Src/sysmem.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/sysmem.o"
arm-none-eabi-gcc "../Core/Src/system_stm32f4xx.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/system_stm32f4xx.d" -MT"Core/Src/system_stm32f4xx.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/system_stm32f4xx.o"
../Core/Src/myLib.c: In function '__io_putchar':
../Core/Src/myLib.c:3:17: warning: implicit declaration of function 'HAL_UART_Transmit' [-Wimplicit-function-declaration]
    3 |                 HAL_UART_Transmit(&huart2, &ch, 1, 10);
      |                 ^~~~~~~~~~~~~~~~~
../Core/Src/myLib.c:3:36: error: 'huart2' undeclared (first use in this function)
    3 |                 HAL_UART_Transmit(&huart2, &ch, 1, 10);
      |                                    ^~~~~~
../Core/Src/myLib.c:3:36: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/myLib.c: In function 'ProgramStart':
../Core/Src/myLib.c:9:9: warning: implicit declaration of function 'printf' [-Wimplicit-function-declaration]
    9 |         printf("\033[2J\033[0;0H");
      |         ^~~~~~
../Core/Src/myLib.c:1:1: note: include '<stdio.h>' or provide a declaration of 'printf'
  +++ |+#include <stdio.h>
    1 | int __io_putchar(int ch)
../Core/Src/myLib.c:9:9: warning: incompatible implicit declaration of built-in function 'printf' [-Wbuiltin-declaration-mismatch]
    9 |         printf("\033[2J\033[0;0H");
      |         ^~~~~~
../Core/Src/myLib.c:9:9: note: include '<stdio.h>' or provide a declaration of 'printf'
../Core/Src/myLib.c:12:9: warning: implicit declaration of function 'Standby' [-Wimplicit-function-declaration]
   12 |         Standby();
      |         ^~~~~~~
../Core/Src/myLib.c: At top level:
../Core/Src/myLib.c:15:6: warning: conflicting types for 'Standby'; have 'void()'
   15 | void Standby()
      |      ^~~~~~~
../Core/Src/myLib.c:12:9: note: previous implicit declaration of 'Standby' with type 'void()'
   12 |         Standby();
      |         ^~~~~~~
../Core/Src/myLib.c: In function 'Standby':
../Core/Src/myLib.c:17:15: warning: implicit declaration of function 'HAL_GPIO_ReadPin' [-Wimplicit-function-declaration]
   17 |         while(HAL_GPIO_ReadPin(B1_GPIO_Port, B1_Pin));
      |               ^~~~~~~~~~~~~~~~
../Core/Src/myLib.c:17:32: error: 'B1_GPIO_Port' undeclared (first use in this function)
   17 |         while(HAL_GPIO_ReadPin(B1_GPIO_Port, B1_Pin));
      |                                ^~~~~~~~~~~~
../Core/Src/myLib.c:17:46: error: 'B1_Pin' undeclared (first use in this function)
   17 |         while(HAL_GPIO_ReadPin(B1_GPIO_Port, B1_Pin));
      |                                              ^~~~~~
make: *** [Core/Src/subdir.mk:37: Core/Src/myLib.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j24 all" terminated with exit code 2. Build might be incomplete.

15:02:59 Build Failed. 5 errors, 6 warnings. (took 438ms)

